2010-01-16 Dietmar Warning
 * tests/transmission: Only few tests should be easier, more examples under 
   examples/TransmissionLine at next
 * tests/bin/check.sh: extend codemodel word in list
 * devices/cpl/cplsetup.c: few polishments
 * parser/inp2p.c, inp2y.c, inpdomod.c: change atof to INPevaluate to allow 10p as 10e-12
 * parser/inppas2.c: correct P element comment

2010-01-15 Holger Vogt
 * subckt.c: patch for translate() by R. Larice, .global bug
   removed (add null character after storing global to node[])
   ngspice.h: _inline for _MSC_VER

2010-01-06 Holger Vogt
 * x11.c: hardcopy by button click, error removed

2010-01-02 Holger Vogt
 * winmain.c: internal system() no longer needed, its available
   in mingw and MS Visual Studio.
   gnuplot.c: small update, call to gnuplot tested up to ver. 4.2.6,
   does not work for Windows and gnuplot 4.4.
 * x11.c: add xfont parameter
 * windisp.c: add wfont and wfont_size parameter
 * winmain.c: use SystemParametersInfo() to get screen size to 
   improve placement of GUI on the screen.

2010-01-01 Holger Vogt
 * spinit.in: Small update
   gnuplot.c: calling gnuplot via xterm

2009-12-31 Holger Vogt
 * measure.c, resource.c, mesaload.c: small patches by R. Larice
   graf.c, plotit.c: gnuplot updates, point chars updated

2009-12-30 Holger Vogt
 * gnuplot.c: some additions
 
2009-12-29 Holger Vogt
 * ngproc2mod.c: patch by R. Larice
   gnuplot.c filename arrays enlarged
 
2009-12-28 Holger Vogt
 * measure.c: comments, 
   /examples/control_structs/repeat3.sp: new examples snippets included

2009-12-22 Holger Vogt
 * measure.c: bugfix (%f replaced by %e)

2009-12-21 Holger Vogt
 * com_measure2.com, measure.c: add vectors to the meas command.
   inpcom.c: no parsing of ternary function in .control section (not
   yet defined anyway).
   /examples/measure /examples/control_structs /examples/control_xspice: 
   new or updated example files.

2009-12-20 Holger Vogt
 * fixing the time 0 value of sine in isrc, vsrc